--- a/superformula-frontend/package.json
+++ b/superformula-frontend/package.json
@@ -54,7 +54,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
-      "pre-push": "npm test"
+      "pre-push": "npm test -- --watchAll=false"
     }
   },
   "lint-staged": {
