--- a/superformula-frontend/package.json
+++ b/superformula-frontend/package.json
@@ -70,8 +70,7 @@
     "lint-staged": {
         "*.@(ts|tsx|js)": [
             "npm run lint",
-            "npm run format",
-            "git add"
+            "npm run format"
         ]
     },
     "eslintConfig": {
