--- a/superformula-frontend/package.json
+++ b/superformula-frontend/package.json
@@ -12,6 +12,7 @@
         "@types/react-dom": "^17.0.11",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
         "typescript": "^4.5.2",
         "web-vitals": "^1.1.2"
@@ -45,6 +46,7 @@
         "@storybook/node-logger": "^6.4.0",
         "@storybook/preset-create-react-app": "^3.2.0",
         "@storybook/react": "^6.4.0",
+        "@types/react-router-dom": "^5.3.2",
         "@typescript-eslint/eslint-plugin": "^5.4.0",
         "@typescript-eslint/parser": "^5.4.0",
         "eslint": "^7.32.0",
