Updating enviroment to work with new lambda function

--- a/superformula-backend/amplify/backend/backend-config.json
+++ b/superformula-backend/amplify/backend/backend-config.json
@@ -8,8 +8,8 @@
           "defaultAuthentication": {
             "authenticationType": "API_KEY",
             "apiKeyConfig": {
-              "apiKeyExpirationDays": 40,
-              "apiKeyExpirationDate": "2022-01-10T02:46:41.209Z",
+              "apiKeyExpirationDays": 60,
+              "apiKeyExpirationDate": "2022-01-30T23:47:41.841Z",
               "description": ""
             }
           },
@@ -24,6 +24,32 @@
       "providerPlugin": "awscloudformation",
       "service": "Lambda",
       "dependsOn": []
+    }
+  },
+  "auth": {
+    "superformulabackendc1b223b8": {
+      "service": "Cognito",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": [],
+      "customAuth": false,
+      "frontendAuthConfig": {
+        "socialProviders": [],
+        "usernameAttributes": [],
+        "signupAttributes": [
+          "EMAIL"
+        ],
+        "passwordProtectionSettings": {
+          "passwordPolicyMinLength": 8,
+          "passwordPolicyCharacters": []
+        },
+        "mfaConfiguration": "OFF",
+        "mfaTypes": [
+          "SMS"
+        ],
+        "verificationMechanisms": [
+          "EMAIL"
+        ]
+      }
     }
   }
 }
