--- a/superformula-frontend/package.json
+++ b/superformula-frontend/package.json
@@ -11,7 +11,7 @@
         "@types/node": "^12.20.37",
         "@types/react": "^17.0.37",
         "@types/react-dom": "^17.0.11",
-        "graphql": "^16.0.1",
+        "graphql": "^15.0.1",
         "lodash": "^4.17.21",
         "mapbox-gl": "^2.6.1",
         "react": "^17.0.2",
@@ -67,7 +67,8 @@
         "husky": "^4.3.8",
         "lint-staged": "^12.1.2",
         "node-sass": "^6.0.1",
-        "prettier": "2.5.0"
+        "prettier": "2.5.0",
+        "storybook-addon-apollo-client": "^4.0.9"
     },
     "husky": {
         "hooks": {
