--- a/superformula-frontend/package.json
+++ b/superformula-frontend/package.json
@@ -55,10 +55,12 @@
         "@types/react-router-dom": "^5.3.2",
         "@typescript-eslint/eslint-plugin": "^5.4.0",
         "@typescript-eslint/parser": "^5.4.0",
+        "cypress": "^9.1.0",
         "eslint": "^7.32.0",
         "eslint-config-airbnb": "^19.0.1",
         "eslint-config-prettier": "^8.3.0",
         "eslint-import-resolver-typescript": "^2.5.0",
+        "eslint-plugin-cypress": "^2.12.1",
         "eslint-plugin-import": "^2.25.3",
         "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-react": "^7.27.1",
