--- a/superformula-frontend/package.json
+++ b/superformula-frontend/package.json
@@ -29,7 +29,9 @@
         "lint": "eslint . --ext ts --ext tsx",
         "format": "prettier --write .",
         "storybook": "start-storybook -p 6006 -s public",
-        "build-storybook": "build-storybook -s public"
+        "build-storybook": "build-storybook -s public",
+        "cypress:open": "cypress open",
+        "cypress:run": "cypress run"
     },
     "browserslist": {
         "production": [
