--- a/superformula-frontend/.env.example
+++ b/superformula-frontend/.env.example
@@ -1,3 +1,3 @@
-REACT_APP_API_URL=
+REACT_APP_API_URL=https://v2yffdppqbga3nncirmj3sskla.appsync-api.us-east-2.amazonaws.com/graphql
 REACT_APP_X_API_KEY=
 REACT_APP_MAP_BOX_ACCESS_KEY=
