--- a/superformula-frontend/package.json
+++ b/superformula-frontend/package.json
@@ -52,6 +52,7 @@
         "@storybook/node-logger": "^6.4.0",
         "@storybook/preset-create-react-app": "^3.2.0",
         "@storybook/react": "^6.4.0",
+        "@testing-library/cypress": "^8.0.2",
         "@types/lodash": "^4.14.177",
         "@types/mapbox-gl": "^2.6.0",
         "@types/react-router-dom": "^5.3.2",
