--- a/superformula-frontend/package.json
+++ b/superformula-frontend/package.json
@@ -6,7 +6,7 @@
         "@apollo/client": "^3.5.5",
         "graphql": "^15.0.1",
         "lodash": "^4.17.21",
-        "mapbox-gl": "^2.0.0",
+        "mapbox-gl": "1.13.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.3.0",
@@ -50,11 +50,11 @@
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
         "@types/jest": "^26.0.24",
+        "@types/lodash": "^4.14.177",
+        "@types/mapbox-gl": "^2.6.0",
         "@types/node": "^12.20.37",
         "@types/react": "^17.0.37",
         "@types/react-dom": "^17.0.11",
-        "@types/lodash": "^4.14.177",
-        "@types/mapbox-gl": "^2.6.0",
         "@types/react-router-dom": "^5.3.2",
         "@typescript-eslint/eslint-plugin": "^5.4.0",
         "@typescript-eslint/parser": "^5.4.0",
